--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "todo-app",
+  "version": "1.0.0",
+  "private": true,
+   "homepage": "https://aakriti-gupta99.github.io/Todo-app",
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.1"
+  },
   "devDependencies": {
     "gh-pages": "^6.3.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
